--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,10 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    # ...
 
+    paths:
+        # pointe vers votre dossier d'images
+        '%kernel.project_dir%/public/picture': images
 when@test:
     twig:
         strict_variables: true
