--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    images_directory: '%kernel.project_dir%/public/img'
 
 services:
     # default configuration for services in *this* file
@@ -21,4 +22,9 @@ services:
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
+    App\EventSubscriber\ContactSubscriber:
+        arguments:
+            $mailer: '@Symfony\Component\Mailer\MailerInterface'
+        tags:
+            - { name: doctrine.event_subscriber, priority : 500 }
     # please note that last definitions always *replace* previous ones
