--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "symfony/validator": "6.2.*",
         "symfony/web-link": "6.2.*",
         "symfony/yaml": "6.2.*",
+        "symfonycasts/verify-email-bundle": "^1.14",
         "twig/cssinliner-extra": "^3.7",
         "twig/extra-bundle": "^3.7",
         "twig/twig": "^2.12|^3.0"
