--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,6 +2,7 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
@@ -9,10 +10,12 @@ security:
             entity:
                 class: App\Entity\Utilisateur
                 property: email
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
             lazy: true
             provider: app_user_provider
@@ -22,24 +25,28 @@ security:
                 # where to redirect after logout
                 # target: app_any_route
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+    # activate different ways to authenticate
+    # https://symfony.com/doc/current/security.html#the-firewall
+    # https://symfony.com/doc/current/security/impersonating_user.html
+    # switch_user: true
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        # - { path: ^/contact, roles: ROLE_CLIENT }
+        - { path: ^/profil, roles: ROLE_CLIENT }
 
 when@test:
     security:
+        role_hierarchy:
+            ROLE_CLIENT: ROLE_USER
+            ROLE_ADMIN: [ROLE_CLIENT, ROLE_GESTION]
+
         password_hashers:
             # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
+            # important to generate secure password hashes. In tests, however, secure hashes
+            # are not important, waste resources, and increase test times. The following
             # reduces the work factor to the lowest possible values.
             Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
                 algorithm: auto
